User  Log in Complete

--- a/LandAtJob/Registration/templates/registration/index.html
+++ b/LandAtJob/Registration/templates/registration/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Design by foolishdeveloper.com -->
-    <title>Login Page</title>
- 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -135,38 +137,7 @@ button{
     </style>
 </head>
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <form method="post">
-        <h3>JobSeeker Login</h3>
-        {% csrf_token %} 
-        <label for="username">Username</label>
-        <input type="text" placeholder="Enter Username" id="username" name="username">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="pass">
-
-        <button type="submit">Log In</button>
-        
-        <a href="{% url 'registration.signup' %}" >Create a account</a>
-        <a href="{% url 'registration.signup' %}" >forget password</a>
-    </form>
+    <a href="{% url 'registration.login' %}" >login for User</a>
+    <a href="{% url 'jobseeker.login' %}" >login for Admin</a>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
