--- a/LandAtJob/JobSeeker/templates/JobSeeker/SignUp.html
+++ b/LandAtJob/JobSeeker/templates/JobSeeker/SignUp.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <!-- Design by foolishdeveloper.com -->
-    <title>Login Page</title>
- 
+    <title>Signup Page</title>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
@@ -51,8 +51,8 @@ body{
     bottom: -80px;
 }
 form{
-    height: 520px;
-    width: 400px;
+    height: 600px;
+    width: 450px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
     transform: translate(-50%,-50%);
@@ -86,12 +86,12 @@ label{
 }
 input{
     display: block;
-    height: 50px;
+    height: 40px;
     width: 100%;
     background-color: rgba(255,255,255,0.07);
     border-radius: 3px;
     padding: 0 10px;
-    margin-top: 8px;
+    margin-top: 2px;
     font-size: 14px;
     font-weight: 300;
 }
@@ -99,7 +99,7 @@ input{
     color: #e5e5e5;
 }
 button{
-    margin-top: 50px;
+    margin-top: 14px;
     width: 100%;
     background-color: #ffffff;
     color: #080710;
@@ -139,34 +139,18 @@ button{
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form method="post">
-        <h3>JobSeeker Login</h3>
-        {% csrf_token %} 
-        <label for="username">Username</label>
-        <input type="text" placeholder="Enter Username" id="username" name="username">
+   
+<form action="{% url 'jobseeker.signup' %}" method="POST">
+    {% csrf_token %}
+    <input type="text" name="username" placeholder="Username" ><br>
+    <input type="text" name="firstname" placeholder="First Name" ><br>
+    <input type="text" name="lastname" placeholder="Last Name" ><br>
+    <input type="email" name="email" placeholder="Email" ><br>
+    <input type="password" name="password1" placeholder="Password" ><br>
+    <input type="password" name="password2" placeholder="Password confirm" ><br>
+    <input type="submit" value="Sign In"><br>
+    <a href="{% url '.jobseeker.login' %} ">Account Already Exists</a>
+</form>
 
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="pass">
-
-        <button type="submit">Log In</button>
-        
-        <a href="{% url 'registration.signup' %}" >Create a account</a>
-        <a href="{% url 'registration.signup' %}" >forget password</a>
-    </form>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
